Fix nav bar item spacing

--- a/client/src/components/navigation-bar.scss
+++ b/client/src/components/navigation-bar.scss
@@ -58,7 +58,7 @@
   }
 
   &__nav-item {
-    padding: 0 1rem;
+    padding: 0 .891rem;
 
     @include bpk-breakpoint-tablet {
       padding-top: .5rem;
